--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,55 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div id="header">
+	<div class="content">
+		<div id="logo">
+			<div id="logo-line-1">msft 401k</div>
+			<div id="logo-line-2">by lovol</div>			
+		</div>
+
+		<div id="navbar">our returns | do it yourself | sign up | how it works | vision</div>
+
+	</div>
+</div>
+
+<div id="poster">
+	<div class="content">
+		<h1 id="poster-title">Microsoft 401k not doing much?</h1>
+		<h2 id="poster-sub-title">Supercharge it in 5 minutes a month</h2>
+
+		<p>We provide a better way to invest your 401k with reduced volatility and higher returns</p>
+
+		<ul>
+			<li>Personalized for Microsoft 401k</li>
+			<li>Easy to follow monthly rebalance signals</li>
+			<li>Made by Microsoft employees for Microsoft employees</li>
+		</ul>
+
+		Sign up now! <input type="text" /><input type="submit" />
+	</div>
+</div>
+
+<div id="main">
+	<div class="content">
+		<div class="main-section">
+			<h2>Section 1</h2>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus faucibus placerat augue quis laoreet. Vestibulum ullamcorper est id nunc bibendum laoreet. Maecenas porttitor nisl commodo risus sodales vestibulum. Donec placerat rhoncus rutrum. Vivamus elit massa, posuere ac rhoncus non, rutrum a tortor. Aliquam rhoncus, dui nec vulputate pretium, nunc purus iaculis magna, vitae convallis sem eros in tortor. Etiam tristique sapien urna.</div>
+		<div class="main-section">
+			<h2>Section 2</h2>
+			Donec condimentum aliquet nulla. Fusce vestibulum tincidunt urna, et fringilla nunc adipiscing id. Suspendisse vel magna non nulla hendrerit feugiat. Vestibulum tristique feugiat dui sit amet egestas. Nam semper elit in nisl dignissim adipiscing. Suspendisse potenti. Sed cursus varius ullamcorper. Sed nisi risus, vestibulum id auctor ut, ultricies sit amet massa. Vivamus vel commodo erat. Duis eget nunc orci.</div>
+		<div class="main-section">
+			<h2>Section 3</h2>
+			Pellentesque congue arcu a odio ornare dignissim. Integer bibendum posuere leo, vitae dictum nunc pulvinar a. Morbi vehicula velit velit, id vulputate justo. Pellentesque vel mi sit amet dui placerat ornare. Integer ut nisl dolor. Nullam viverra ullamcorper ultricies. Aliquam blandit gravida augue, ac condimentum odio semper a. Proin posuere quam felis, sit amet pharetra odio. Sed ac augue leo, eget ornare nulla.</div>
+		<div class="main-section">
+			<h2>Section 4</h2>
+			Quisque rutrum quam non nisi luctus dignissim. Sed suscipit eleifend tellus, non venenatis velit imperdiet eget. Mauris sed ipsum at massa scelerisque imperdiet. Aliquam erat volutpat. Suspendisse id nulla ut augue rhoncus tincidunt eu vitae tellus. Aliquam vitae massa ipsum, quis blandit nisi. Nunc commodo pulvinar tortor ut feugiat. Duis magna dolor, placerat nec hendrerit nec, congue volutpat mi. Donec justo nulla, condimentum non auctor in, rutrum ac sem. Pellentesque at augue nibh.</div>
+		<div class="main-section">
+			<h2>Section 5</h2>
+			Morbi non lorem augue, quis porta eros. Donec convallis aliquam sem, pretium porta neque mollis quis. Nam at elit eget augue scelerisque vulputate. Vivamus in odio dui. Sed mauris lacus, mollis id porta nec, egestas vitae metus. Etiam in nisi massa, id luctus mauris. Donec feugiat magna eu lectus congue porta. Pellentesque non erat et dolor scelerisque condimentum. Duis at ligula ut ligula dictum gravida in ac nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac augue sit amet mauris vulputate laoreet. Cras vestibulum sem vel quam viverra ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer lobortis rhoncus velit non consectetur.</div>
+	</div>
+</div>
+
+<div id="footer">
+	<div class="content">
+		<h4>footer</h4>
+		<p>Aenean molestie libero vehicula purus feugiat rhoncus. Quisque id sem nibh, quis mattis nibh. Suspendisse potenti. Aenean varius quam ac lectus malesuada vel elementum libero ultricies. Nullam pretium nulla ac erat tempus ut vehicula est sagittis. Cras ullamcorper mauris a velit ultrices bibendum. Maecenas id ligula massa, ac mollis arcu.</p>
+	</div>
+</div>
