--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,12 +3,33 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+body { margin: 0px; padding: 0px; }
 
-#header { background-color: white; height: 75px;}
-#poster { background-color: #227788; color: white; padding: 10px 0px 30px 0px; }
+#header { background-color: white; height: 75px;
+
+-webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+-moz-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+-webkit-transition: box-shadow 0.2s linear;
+-moz-transition: box-shadow 0.2s linear;
+-ms-transition: box-shadow 0.2s linear;
+-o-transition: box-shadow 0.2s linear;
+transition: box-shadow 0.2s linear;
+border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+display: block;
+position: fixed;
+top: 0;
+left: 0;
+float: left;
+width: 100%;
+z-index: 12;
+
+}
+
+#poster { background-color: #227788; color: white; padding: 85px 0px 30px 0px; }
 #main { background-color: white; padding: 10px 0px 30px 0px;}
 #footer { background-color: #227788; color: white; padding: 10px 0px; 
-	font-size: 85%; }
+	font-size: 85%; height: 300px; }
 
 .content { width: 800px; text-align: left; 
 	margin-left: auto; margin-right: auto; }
