just in case commit?

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -106,3 +106,6 @@ h3, h4, h5 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-ser
 
 
 .main-section { padding: 10px 0px; }
+
+#form_error { margin: 0px 0px -20px 0px; padding: 0px; color: #FF66AA; font-style: italic;
+	font-weight: bold; visibility: hidden; }
