--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,63 +3,95 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-body { margin: 0px; padding: 0px; 
-font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;
+body { 
+	margin: 0px; 
+	padding: 0px; 
+	font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;
 }
 
-#logo { width: 150px; height: 75px; display: table-cell; vertical-align: middle; }
-#logo-line-1 { font-size: 30px; font-weight: bold; }
-#logo-line-2 { font-size: 20px; }
-#navbar { width: 650px; height: 75px; display: table-cell; vertical-align: middle; text-align: right;}
+#logo { 
+	width: 150px; 
+	height: 75px; 
+	display: table-cell; 
+	vertical-align: middle; 
+}
 
-#header { background-color: white;
+#logo-line-1 { 
+	font-size: 30px; 
+	font-weight: bold; 
+}
+
+#logo-line-2 { 
+	font-size: 20px; 
+}
+
+#navbar { 
+	width: 650px; 
+	height: 75px; 
+	display: table-cell; 
+	vertical-align: middle; 
+	text-align: right;
+}
+
+#header { 
+	background-color: white;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;
-
-
--webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
--moz-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
--webkit-transition: box-shadow 0.2s linear;
--moz-transition: box-shadow 0.2s linear;
--ms-transition: box-shadow 0.2s linear;
--o-transition: box-shadow 0.2s linear;
-transition: box-shadow 0.2s linear;
-border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-display: block;
-position: fixed;
-top: 0;
-left: 0;
-float: left;
-width: 100%;
-z-index: 10;
-
+	/* slide-away styling */
+	-webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 2px 15px rgba(0, 0, 0, 0.25);
+	-webkit-transition: box-shadow 0.2s linear;
+	-moz-transition: box-shadow 0.2s linear;
+	-ms-transition: box-shadow 0.2s linear;
+	-o-transition: box-shadow 0.2s linear;
+	transition: box-shadow 0.2s linear;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	float: left;
+	width: 100%;
+	z-index: 10;
 }
 
-#poster { background-color: #017890; color: white; padding: 85px 0px 30px 0px; 
-display: block;
-width: 100%;
-position: fixed;
-z-index: 1;
+#poster { 
+	background-color: #017890; 
+	color: white; 
+	padding: 85px 0px 30px 0px; 
+	display: block;
+	width: 100%;
+	position: fixed;
+	z-index: 1;
 }
-#main { background-color: white; padding: 10px 0px 0px 0px; z-index: 5; 
-display: block;
-width: 100%;
-position: absolute;
-margin-top: 505px;
 
--webkit-box-shadow: rgba(0, 0, 0, 0.246094) 0px -2px 15px 0px;
-background-attachment: scroll;
-background-clip: border-box;
-background-origin: padding-box;
-border-bottom-color: 
-rgba(0, 0, 0, 0.796875);
-border-bottom-style: solid;
-border-bottom-width: 1px;
-box-shadow: rgba(0, 0, 0, 0.246094) 0
-
+#main { 
+	background-color: white; 
+	padding: 10px 0px 0px 0px; 
+	z-index: 5; 
+	display: block;
+	width: 100%;
+	position: absolute;
+	margin-top: 505px;
+	/* slide-away styling */
+	-webkit-box-shadow: rgba(0, 0, 0, 0.246094) 0px -2px 15px 0px;
+	background-attachment: scroll;
+	background-clip: border-box;
+	background-origin: padding-box;
+	border-bottom-color: 
+	rgba(0, 0, 0, 0.796875);
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	box-shadow: rgba(0, 0, 0, 0.246094) 0
 }
-#footer { background-color: #017890; color: white; padding: 10px 0px 20px 0px; margin: 30px 0px 0px 0px;
-	font-size: 85%; }
+
+#footer { 
+	background-color: #017890; 
+	color: white; 
+	padding: 10px 0px 20px 0px; 
+	margin: 30px 0px 0px 0px;
+	font-size: 85%; 
+}
 
 .form-button {
 	background-color: #E95D22;
@@ -69,6 +101,11 @@ box-shadow: rgba(0, 0, 0, 0.246094) 0
 	font-size: 200%;
 	color: white;
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;
+}
+
+.form-button:hover, .form-button:active {
+	background-color: #F2662F;	
+	cursor: pointer;
 }
 
 .form-text-field {
@@ -82,30 +119,61 @@ box-shadow: rgba(0, 0, 0, 0.246094) 0
 	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;	
 }
 
-.three-column-div { width: 230px; float: left; }
-.three-column-margin { margin: 0px 55px 0px 0px; }
-.picbox { width: 230px; height: 230px; background-color: #BBBBBB; text-align: center; display: table-cell; vertical-align: middle; }
-.clear-div { clear: both; }
-
-.chartbox1 { width: 300px; height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px; }
-.poster-blurb { float: left; width: 500px; 
-font-size: 100%;
-color: #E0E0E0;
-padding: 0px 20px 0px 0px;
-font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;
+.three-column-div { 
+	width: 230px; 
+	float: left; 
 }
 
+.three-column-margin { 
+	margin: 0px 55px 0px 0px; 
+}
+
+.picbox { 
+	width: 230px; 
+	height: 230px; 
+	background-color: #BBBBBB; 
+	text-align: center; 
+	display: table-cell; 
+	vertical-align: middle; 
+}
+
+.clear-div { 
+	clear: both; 
+}
+
+.chartbox1 { 
+	width: 300px; 
+	height: 200px; 
+	background-color: #FFCCAA; 
+	text-align: center; 
+	display: table-cell; 
+	vertical-align: middle; 
+	margin: 0px; 
+	color: black; 
+	padding: 0px 30px; 
+}
+
+.poster-blurb { 
+	float: left; 
+	width: 500px; 
+	font-size: 100%;
+	color: #E0E0E0;
+	padding: 0px 20px 0px 0px;
+	font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;
+}
 
 h1 { font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif; font-size: 240%; }
 h2 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 200%; }
 h3 { font-size: 155%; font-weight: normal; }
 h3, h4, h5 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; }
 
-.content { width: 800px; text-align: left; 
-	margin-left: auto; margin-right: auto; }
+.content { 
+	width: 800px; 
+	text-align: left; 
+	margin-left: auto; 
+	margin-right: auto; 
+}
 
-
-.main-section { padding: 10px 0px; }
-
-#form_error { margin: 0px 0px -20px 0px; padding: 0px; color: #FF66AA; font-style: italic;
-	font-weight: bold; visibility: hidden; }
+.main-section { 
+	padding: 10px 0px; 
+}
