--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -72,7 +72,7 @@ body {
 	display: block;
 	width: 100%;
 	position: absolute;
-	margin-top: 505px;
+	margin-top: 525px;
 	/* slide-away styling */
 	-webkit-box-shadow: rgba(0, 0, 0, 0.246094) 0px -2px 15px 0px;
 	background-attachment: scroll;
@@ -176,4 +176,9 @@ h3, h4, h5 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-ser
 
 .main-section { 
 	padding: 10px 0px; 
+}
+
+.error-div {
+	color: yellow;
+	font-weight: bold;
 }
