add scrolling for top links

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -182,3 +182,16 @@ h3, h4, h5 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-ser
 	color: yellow;
 	font-weight: bold;
 }
+
+a {
+	text-decoration: none;
+	color: #88BBFF;
+}
+
+a:hover, a:active {
+	color: orange;
+}
+
+#navbar {
+	color: #BBBBBB;
+}
